[#12081] User-friendliness: Fix evaluee/recipient mobile text wrap (#12139)
* Fix mobile text wrap for evaluee/recipient

* Align Evaluee/Recipient to left

* Fix lint

--- a/src/web/app/components/question-submission-form/question-submission-form.component.scss
+++ b/src/web/app/components/question-submission-form/question-submission-form.component.scss
@@ -27,18 +27,6 @@
   margin-left: 20px;
 }
 
-.evaluee-col {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-@media (max-width: 768px) {
-  .evaluee-col {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-}
-
 .evaluee-select {
   padding-left: 15px;
   padding-right: 15px;
